[tool.poetry]
name = "reservation"
version = "0.1.0"
description = ""
authors = ["Alexey <riezievskii@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
